--- a/src/main/resources/assets/healthindicators/lang/en_us.json
+++ b/src/main/resources/assets/healthindicators/lang/en_us.json
@@ -107,5 +107,5 @@
   "key.healthindicators.overrideAllFilters": "Override all config filters",
   "key.healthindicators.increaseHeartOffset": "Increase Heart Offset",
   "key.healthindicators.decreaseHeartOffset": "Decrease Heart Offset",
-  "key.healthindicators.openModMenuConfig": "Decrease Heart Offset"
+  "key.healthindicators.openModMenuConfig": "Open Config Screen"
 }
