--- a/common/src/main/resources/assets/healthindicators/lang/ru_ru.json
+++ b/common/src/main/resources/assets/healthindicators/lang/ru_ru.json
@@ -1,96 +1,129 @@
 {
-"yacl3.config.health-indicators:config.passive_mobs": "Показывать здоровье мирных мобов",
-"yacl3.config.health-indicators:config.passive_mobs.desc": "Отображает индикатор здоровья над мирными мобами",
+  "yacl3.config.health-indicators:config.passive_mobs": "Показать для пассивных мобов",
+  "yacl3.config.health-indicators:config.passive_mobs.desc": "Отображает полоску здоровья над пассивными мобами",
 
-"yacl3.config.health-indicators:config.hostile_mobs": "Показывать здоровье враждебных мобов",
-"yacl3.config.health-indicators:config.hostile_mobs.desc": "Отображает индикатор здоровья над враждебными мобами",
+  "yacl3.config.health-indicators:config.hostile_mobs": "Показать для враждебных мобов",
+  "yacl3.config.health-indicators:config.hostile_mobs.desc": "Отображает полоску здоровья над враждебными мобами",
 
-"yacl3.config.health-indicators:config.angered_mobs": "Показывать здоровье разгневанных мобов",
-"yacl3.config.health-indicators:config.angered_mobs.desc": "Отображает индикатор здоровья над разгневанными мобами. Это отличается от 'враждебных мобов', так как мирный моб (например, железный голем, эндермен) не считается враждебным, но может атаковать игрока, если его спровоцировать.",
+  "yacl3.config.health-indicators:config.angered_mobs": "Показать для разъяренных мобов",
+  "yacl3.config.health-indicators:config.angered_mobs.desc": "Отображает полоску здоровья над разъяренными мобами. Это отличается от 'Враждебных мобов', так как пассивный моб (например: железный голем, эндермен) не считается враждебным мобом, но может атаковать игрока, если его спровоцировать.",
 
-"yacl3.config.health-indicators:config.players": "Показывать здоровье игроков",
-"yacl3.config.health-indicators:config.players.desc": "Отображает индикатор здоровья над другими игроками",
+  "yacl3.config.health-indicators:config.players": "Показать для игроков",
+  "yacl3.config.health-indicators:config.players.desc": "Отображает полоску здоровья над другими игроками",
 
-"yacl3.config.health-indicators:config.self": "Показывать свое здоровье",
-"yacl3.config.health-indicators:config.self.desc": "Отображает индикатор здоровья над вами в режиме от третьего лица и в меню инвентаря",
+  "yacl3.config.health-indicators:config.self": "Показать для себя",
+  "yacl3.config.health-indicators:config.self.desc": "Отображает полоску здоровья над собой в режиме от третьего лица и в меню инвентаря",
 
-"yacl3.config.health-indicators:config.after_attack": "Показывать здоровье только после атаки",
-"yacl3.config.health-indicators:config.after_attack.desc": "Индикатор здоровья отображается только после того, как существо было атаковано.",
+  "yacl3.config.health-indicators:config.blacklistOrWhitelist": "Черный список или белый список",
+  "yacl3.config.health-indicators:config.blacklistOrWhitelist.desc": "Переключение режима черного/белого списка для списка ниже \n\n Если вы выберете черный список, то список ниже предотвратит отображение полосок здоровья над указанными типами сущностей. \n\n Если вы выберете белый список, то полоски здоровья будут отображаться только над типами сущностей, указанными в списке. Оставьте список пустым, чтобы отключить.",
+  "yacl3.config.health-indicators:config.blacklistOrWhitelist.fmt.true": "Черный список",
+  "yacl3.config.health-indicators:config.blacklistOrWhitelist.fmt.false": "Белый список",
 
-"yacl3.config.health-indicators:config.time_after_hit": "Секунды до исчезновения здоровья после атаки",
-"yacl3.config.health-indicators:config.time_after_hit.desc": "Индикатор здоровья исчезает после заданного количества секунд.",
+  "yacl3.config.health-indicators:config.list": "Отфильтрованные сущности",
+  "yacl3.config.health-indicators:config.list.desc": "Черный/белый список типов сущностей для отображения их здоровья.",
 
-"yacl3.config.health-indicators:config.damaged_only": "Показывать здоровье только если существо ранено",
-"yacl3.config.health-indicators:config.damaged_only.desc": "Индикатор здоровья отображается только если здоровье существа ниже его максимального. Может не работать в случаях, когда у существа есть эффект поглощения.",
+  "yacl3.config.health-indicators:config.whitelist": "Белый список",
+  "yacl3.config.health-indicators:config.whitelist.desc": "Полоски здоровья будут отображаться только над типами сущностей, указанными в этом списке. Оставьте этот список пустым, чтобы отключить.",
 
-"yacl3.config.health-indicators:config.looking_at": "Показывать здоровье только при взгляде на существо",
-"yacl3.config.health-indicators:config.looking_at.desc": "Индикатор здоровья отображается только если существо находится в поле зрения.",
+  "yacl3.config.health-indicators:config.after_attack": "Только атакованные сущности",
+  "yacl3.config.health-indicators:config.after_attack.desc": "Здоровье будет отображаться только после того, как сущность была атакована.",
 
-"yacl3.config.health-indicators:config.reach": "Дальность 'взгляда'",
-"yacl3.config.health-indicators:config.reach.desc": "На каком расстоянии может находиться существо для опции 'взгляда'. Значение по умолчанию (3 блока) равно дальности атаки в режиме выживания Minecraft.",
+  "yacl3.config.health-indicators:config.time_after_hit": "Секунды до сброса индикатора",
+  "yacl3.config.health-indicators:config.time_after_hit.desc": "Индикатор здоровья исчезнет через установленное количество секунд.",
 
-"yacl3.config.health-indicators:config.override_players": "Всегда показывать здоровье игроков",
-"yacl3.config.health-indicators:config.override_players.desc": "Переопределяет вышеуказанные опции и всегда отображает здоровье игроков, даже если они не были атакованы, у них полное здоровье или они не находятся в прицеле.",
-"yacl3.config.health-indicators:config.override_players_label.desc": "Переопределяет вышеуказанные критерии и всегда отображает здоровье для следующих типов существ. \n \n В настоящее время поддерживается только тип playerentity.",
+  "yacl3.config.health-indicators:config.damaged_only": "Только поврежденные сущности",
+  "yacl3.config.health-indicators:config.damaged_only.desc": "Здоровье будет отображаться только если здоровье сущности ниже максимального. Возможно, не будет работать в случаях, когда сущности имеют эффект поглощения.",
 
-"yacl3.config.health-indicators:config.indicator_type": "Тип индикатора",
-"yacl3.config.health-indicators:config.indicator_type.desc": "Отображать ли плавающие сердечки или числовой индикатор.",
+  "yacl3.config.health-indicators:config.max_health_percentage": "Порог здоровья",
+  "yacl3.config.health-indicators:config.max_health_percentage.desc": "Максимальное количество здоровья, в процентах от общего, которое необходимо для отображения индикатора. \n\nНапример, если вы установите его на 40%, то сущности с здоровьем выше 40% не будут отображать индикатор. Установите это значение на 100%, чтобы отображать для всех сущностей.",
 
-"yacl3.config.health-indicators:config.hearts_per_row": "Сердечки в строке (бета)",
+  "yacl3.config.health-indicators:config.looking_at": "Только целевые сущности",
+  "yacl3.config.health-indicators:config.looking_at.desc": "Здоровье будет отображаться только если на сущность смотрят.",
 
-"yacl3.config.health-indicators:config.number_type_settings_label.desc": "Настройки для числового индикатора",
+  "yacl3.config.health-indicators:config.reach": "Диапазон",
+  "yacl3.config.health-indicators:config.reach.desc": "Насколько далеко может находиться сущность для опции 'целевая'. Значение по умолчанию (3 блока) равно дальности атаки в режиме выживания в Minecraft.",
 
-"yacl3.config.health-indicators:config.number_color": "Цвет текста",
-"yacl3.config.health-indicators:config.number_color.desc": "Цвет числового индикатора",
+  "yacl3.config.health-indicators:config.within_distance": "Только в пределах расстояния",
+  "yacl3.config.health-indicators:config.within_distance.desc": "Сущности за пределами этого расстояния не будут отображать здоровье. Примечание: это отличается от опции 'диапазон'; опция диапазона изменяет целевое расстояние, тогда как эта опция ограничивает видимость за пределами определенного расстояния",
 
-"yacl3.config.health-indicators:config.render_number_display_shadow": "Отображать тень",
-"yacl3.config.health-indicators:config.render_number_display_shadow.desc": "Должна ли быть тень за текстом индикатора",
+  "yacl3.config.health-indicators:config.distance": "Расстояние",
+  "yacl3.config.health-indicators:config.distance.desc": "Расстояние для опции 'в пределах расстояния'",
 
-"yacl3.config.health-indicators:config.render_number_display_background_color": "Отображать фон",
-"yacl3.config.health-indicators:config.render_number_display_background_color.desc": "Должен ли быть цветной фон за числовым индикатором",
+  "yacl3.config.health-indicators:config.override_players": "Всегда показывать здоровье игроков",
+  "yacl3.config.health-indicators:config.override_players.desc": "Отменяет вышеуказанные опции и всегда отображает здоровье игроков, даже если они не были атакованы, у них полное здоровье или они не на прицеле",
+  "yacl3.config.health-indicators:config.override_players_label.desc": "Отменяет вышеуказанные критерии и всегда отображает здоровье для указанных ниже типов сущностей. \n \n В настоящее время поддерживается только тип сущности player.",
 
-"yacl3.config.health-indicators:config.number_display_background_color": "Цвет фона",
-"yacl3.config.health-indicators:config.number_display_background_color.desc": "Цвет фона для числового индикатора",
+  "yacl3.config.health-indicators:config.indicator_type": "Тип индикатора",
+  "yacl3.config.health-indicators:config.indicator_type.desc": "Отображать ли плавающее отображение сердец или числовое отображение. Установка этого параметра на 'динамический' будет отображать сердца для сущностей с менее чем 100 здоровьем и числа для сущностей с более чем 100 здоровьем.",
 
-"yacl3.config.health-indicators:config.size": "Размер индикатора",
-"yacl3.config.health-indicators:config.size.desc": "Масштаб индикаторов",
+  "yacl3.config.health-indicators:config.icons_per_row": "Сердца в строке (бета)",
 
-"yacl3.config.health-indicators:config.display_offset": "Смещение отображения",
-"yacl3.config.health-indicators:config.display_offset.desc": "Расстояние между верхней частью существа и индикатором здоровья. Отрицательные значения смещения могут сделать так, что индикатор здоровья будет отображаться ниже или в середине существа. Экстремальные значения смещения могут сделать индикатор здоровья невидимым.",
+  "yacl3.config.health-indicators:config.use_vanilla_textures": "Использовать стандартные текстуры",
+  "yacl3.config.health-indicators:config.use_vanilla_textures.desc": "Некоторые пакеты ресурсов используют пользовательскую иконку сердца, что может нарушить работу этого мода. Включение этой настройки переопределит пользовательскую иконку.",
 
-"yacl3.config.health-indicators:config.offset_step_size": "Шаг смещения",
-"yacl3.config.health-indicators:config.offset_step_size.desc": "Шаг смещения, который изменяется при нажатии клавиши (по умолчанию вверх-вниз).",
+  "yacl3.config.health-indicators:config.show_heart_effects": "Показать эффекты",
+  "yacl3.config.health-indicators:config.show_heart_effects.desc": "Некоторые статусные эффекты и состояния (отравлен, засохший, хардкор, заморожен) изменяют текстуру сердец. Включение этой опции также изменит текстуру индикатора здоровья сердец.",
 
-"yacl3.config.health-indicators:config.force_higher_offset_for_players": "Принудительное повышение смещения для игроков",
-"yacl3.config.health-indicators:config.force_higher_offset_for_players.desc": "Обычно индикатор здоровья отображается с более высоким смещением для игроков и существ с видимой меткой имени. \n \n Однако некоторые серверы реализуют пользовательскую метку имени, которую мод не распознает и не учитывает. Эта опция принудительно повышает смещение для *всех* игроков для решения проблемы.",
+  "yacl3.config.health-indicators:config.number_type_settings_label.desc": "Настройки для числового индикатора",
 
-"yacl3.config.health-indicators:config.message_type": "Тип сообщения",
-"yacl3.config.health-indicators:config.message_type.desc": "Будут ли сообщения мода (индикатор включен/выключен, смещение сердечек и т. д.) отправляться в чат, actionbar или не отправляться вообще",
+  "yacl3.config.health-indicators:config.number_color": "Цвет текста",
+  "yacl3.config.health-indicators:config.number_color.desc": "Цвет числа",
 
-"yacl3.config.health-indicators:config.colored_messages": "Цветные сообщения",
-"yacl3.config.health-indicators:config.colored_messages.desc": "Должны ли сообщения индикатора (включен/выключен) быть цветными (зеленый и красный соответственно)",
+  "yacl3.config.health-indicators:config.render_number_display_shadow": "Отображать тень",
+  "yacl3.config.health-indicators:config.render_number_display_shadow.desc": "Нужна ли тень за текстом отображения",
 
-"yacl3.config.health-indicators:config.enable_commands": "Включить команды мода",
-"yacl3.config.health-indicators:config.enable_commands.desc": "Включает команду /healthindicators и ее подкоманды",
+  "yacl3.config.health-indicators:config.render_number_display_background_color": "Отображать фон",
+  "yacl3.config.health-indicators:config.render_number_display_background_color.desc": "Нужен ли цветной фон за числовым отображением",
 
-"yacl3.config.health-indicators:config.hearts_clipping": "Обрезка сердечек",
-"yacl3.config.health-indicators:config.hearts_clipping.desc": "Сердечки будут сдвигаться вниз, если на их нормальной позиции отображения есть твердый блок.",
+  "yacl3.config.health-indicators:config.number_display_background_color": "Цвет фона",
+  "yacl3.config.health-indicators:config.number_display_background_color.desc": "Цвет фона для числового отображения",
 
-"yacl3.config.health-indicators:config.category.filters": "Фильтры",
-"yacl3.config.health-indicators:config.category.appearance": "Внешний вид",
-"yacl3.config.health-indicators:config.category.messages": "Сообщения и команды",
+  "yacl3.config.health-indicators:config.size": "Размер индикатора",
+  "yacl3.config.health-indicators:config.size.desc": "Масштаб индикаторов",
 
-"yacl3.config.health-indicators:config.category.filters.group.entity_type": "Типы существ",
-"yacl3.config.health-indicators:config.category.filters.group.advanced": "Расширенные",
-"yacl3.config.health-indicators:config.category.appearance.group.indicator_type": "Внешний вид индикатора",
-"yacl3.config.health-indicators:config.category.appearance.group.offset": "Расположение индикатора",
-"yacl3.config.health-indicators:config.category.messages.group.messages_appearance": "Сообщения мода",
-"yacl3.config.health-indicators:config.category.messages.group.commands": "Команды мода",
+  "yacl3.config.health-indicators:config.percentage_based_health": "Здоровье в процентах",
+  "yacl3.config.health-indicators:config.percentage_based_health.desc": "Показывает здоровье в процентах вместо сырых значений. Включение этой опции означает, что все мобы будут показывать одинаковое базовое здоровье (настраивается ниже) и их фактическое здоровье будет показано из этого. \n\nНапример, железный голем может иметь 40 из 50 сердец, но индикатор покажет 8 из 10 сердец. \n\nЧисловой индикатор не будет следовать этой механике и просто покажет процентное значение, например, 80%",
 
-"key.categories.healthindicators": "Индикаторы здоровья",
-"key.healthindicators.renderingEnabled": "Переключить отображение",
-"key.healthindicators.armorRenderingEnabled": "Переключить отображение брони",
-"key.healthindicators.overrideAllFilters": "Переопределить все фильтры конфигурации",
-"key.healthindicators.increaseHeartOffset": "Увеличить смещение сердечек",
-"key.healthindicators.decreaseHeartOffset": "Уменьшить смещение сердечек"
+  "yacl3.config.health-indicators:config.max_health": "Базовое здоровье",
+  "yacl3.config.health-indicators:config.max_health.desc": "Базовое значение (в hp, не в сердцах! 1 сердце = 2hp) для здоровья в процентах.",
+
+  "yacl3.config.health-indicators:config.display_offset": "Смещение отображения",
+  "yacl3.config.health-indicators:config.display_offset.desc": "Расстояние между верхом сущности и отображением здоровья. Отрицательные значения смещения могут сделать отображение здоровья под или посередине сущности. Крайние значения смещения могут сделать отображение здоровья вне видимости.",
+
+  "yacl3.config.health-indicators:config.offset_step_size": "Размер шага смещения",
+  "yacl3.config.health-indicators:config.offset_step_size.desc": "Смещение, которое изменит привязка клавиш (по умолчанию стрелка вверх и стрелка вниз) за щелчок.",
+
+  "yacl3.config.health-indicators:config.force_higher_offset_for_players": "Принудительно установить большее смещение для игроков",
+  "yacl3.config.health-indicators:config.force_higher_offset_for_players.desc": "Обычно отображение здоровья отображается с большим смещением для игроков и сущностей с видимой именной меткой. \n \n Однако некоторые серверы реализуют пользовательскую именную метку, которую мод не распознает и не учитывает. Эта опция принудительно увеличит смещение для *всех* игроков, чтобы исправить проблему.",
+
+  "yacl3.config.health-indicators:config.message_type": "Тип сообщения",
+  "yacl3.config.health-indicators:config.message_type.desc": "Будут ли сообщения мода (включение/выключение индикатора, смещение сердца и т.д.) отправляться в чат, на панель действий или не отправляться вообще",
+
+  "yacl3.config.health-indicators:config.colored_messages": "Цветные сообщения",
+  "yacl3.config.health-indicators:config.colored_messages.desc": "Будут ли сообщения включения/выключения индикатора быть цветными (зеленый и красный соответственно)",
+
+  "yacl3.config.health-indicators:config.enable_commands": "Включить команды мода",
+  "yacl3.config.health-indicators:config.enable_commands.desc": "Включает команду /healthindicators и ее подкоманды",
+
+  "yacl3.config.health-indicators:config.hearts_clipping": "Обрезка сердец",
+  "yacl3.config.health-indicators:config.hearts_clipping.desc": "Сердца будут опускаться вниз, если в их обычной позиции рендеринга есть твердый блок.",
+
+  "yacl3.config.health-indicators:config.category.filters": "Видимость",
+  "yacl3.config.health-indicators:config.category.appearance": "Внешний вид",
+  "yacl3.config.health-indicators:config.category.messages": "Сообщения и команды",
+
+  "yacl3.config.health-indicators:config.category.filters.group.entity_type": "Категории сущностей",
+  "yacl3.config.health-indicators:config.category.filters.group.advanced": "Расширенные",
+  "yacl3.config.health-indicators:config.category.appearance.group.indicator_type": "Внешний вид индикатора",
+  "yacl3.config.health-indicators:config.category.appearance.group.offset": "Расположение индикатора",
+  "yacl3.config.health-indicators:config.category.messages.group.messages_appearance": "Сообщения мода",
+  "yacl3.config.health-indicators:config.category.messages.group.commands": "Команды мода",
+
+  "key.categories.healthindicators": "Индикаторы здоровья",
+  "key.healthindicators.renderingEnabled": "Переключить отображение",
+  "key.healthindicators.armorRenderingEnabled": "Переключить отображение брони",
+  "key.healthindicators.overrideAllFilters": "Отменить все конфигурационные фильтры",
+  "key.healthindicators.increaseHeartOffset": "Увеличить смещение сердца",
+  "key.healthindicators.decreaseHeartOffset": "Уменьшить смещение сердца",
+  "key.healthindicators.openModMenuConfig": "Открыть экран конфигурации"
 }
